--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tailwindcss": "^1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build && react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "build:css": "npx tailwind build ./src/index.css -o ./src/styles.css",
     "test": "react-scripts test",
