--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.1.4",
